Implementada la paginación en equipos con filtros